<resources>
    <string name="app_name">CCM-DA</string>
    <string name="login_to_account">Login to Account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="tvLoginAcc_02">Enter your email and password for log to account</string>
    <string name="etAddress_Login">Enter your password</string>
    <string name="btnLogin_Login">LogIn</string>
    <string name="tvLoginAcc_03">If You have not an account</string>
    <string name="etSingUp_Login">SignUp</string>
    <string name="login_now">Login Now</string>

    <string name="title_activity_a_d">ADActivity</string>

    <string name="admin_dashboard">Dashboard</string>
    <string name="admin_user_mange">User Manage</string>
    <string name="admin_doctor_manage">Doctor Manage</string>
    <string name="admin_appointment_manage">Appointment Manage</string>
    <string name="title_activity_d_d">DDActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>