<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ccm_da.ui.admin_dashboard.AdminDashboardFragment"
        android:label="@string/admin_dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ccm_da.ui.admin_user_manage.AdminUserManageFragment"
        android:label="@string/admin_user_mange"
        tools:layout="@layout/fragment_admin_user_manage" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ccm_da.ui.admin_doctor_mange.AdminDoctorManageFragment"
        android:label="@string/admin_doctor_manage"
        tools:layout="@layout/fragment_admin_doctor_manage" />
    <fragment
        android:id="@+id/adminAppointmentManage"
        android:name="com.example.ccm_da.ui.admin_appointment_manage.AdminAppointmentManage"
        android:label="fragment_admin_appointment_manage"
        tools:layout="@layout/fragment_admin_appointment_manage" />
</navigation>